# my-work-flow-plus

./: .coveragerc  .dockerignore  .flake8  .gitignore  LICENSE  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: gunicorn.conf.py
backend/apps/accounts/: apps.py
backend/apps/audit_log/: apps.py
backend/apps/core/: apps.py
backend/apps/financial/: apps.py
backend/apps/human_resources/: apps.py
backend/apps/inventory/: apps.py
backend/apps/purchases/: apps.py
backend/apps/sales/: apps.py
backend/config/: settings.py
config/: settings.py
docker/: Dockerfile  compose.yaml
docs/: REQUIREMENTS.md
requirements/: base.txt  dev-requirements.txt  dev.txt
src/config/: settings.py
